objects/T1_Channel__c/T1_Channel__c.object-meta.xml
<CustomObject>
    <label>T1 Channel</label>
    <nameField>
        <label>T1 Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1 Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>