objects/T1_Channel__c/fields/Hunt_Groups__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Groups__c</fullName>
    <label>Hunt Groups</label>
    <length>25</length>
    <type>Text</type>
</CustomField>