objects/T1_Channel__c/fields/LNP_or_Integra__c.field-meta.xml
<CustomField>
    <fullName>LNP_or_Integra__c</fullName>
    <label>LNP or Integra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LEC LNP</fullName>
            </value>
            <value>
                <fullName>Integra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>