objects/T1_Channel__c/fields/Start_Signal__c.field-meta.xml
<CustomField>
    <fullName>Start_Signal__c</fullName>
    <label>Start Signal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>