objects/T1_Channel__c/fields/T1_Checklist__c.field-meta.xml
<CustomField>
    <fullName>T1_Checklist__c</fullName>
    <label>T1 Checklist</label>
    <referenceTo>Technical_Information__c</referenceTo>
    <relationshipLabel>T1 Channels</relationshipLabel>
    <relationshipName>T1_Channels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>