objects/T1_Channel__c/fields/Use_for_Number_Voice_F__c.field-meta.xml
<CustomField>
    <fullName>Use_for_Number_Voice_F__c</fullName>
    <label>Use for Number (Voice, F</label>
    <length>50</length>
    <type>Text</type>
</CustomField>